fixed dropdown menu bug and alignment

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,10 +1,9 @@
 .navbar-lewagon {
   z-index: 1;
-  justify-content: space-between;
   height: 50px;
   color: rgb(95, 93, 93);
-  box-shadow: 0 0 15px rgba(0,0,0,0.3);
-  opacity: 95%;
+  box-shadow: $shadow-md;
+  opacity: 90%;
   display: flex;
   padding: 0 16px;
   a {
@@ -17,7 +16,7 @@
     list-style: none;
   }
   div:first-of-type {
-    display: flex;
+    // display: flex;
     li {
       margin: 0 4px;
     }
